# ai-engineering-handbook

./: .gitignore  005_Top_p_Top_k.ipynb  007_Confusion_Matrix_Precision_Recall.ipynb  009_K_Means_Clustering.ipynb  00_KDE_Tutorial.ipynb  010_Decision_Trees.ipynb  013_Missing_Data_Imputation.ipynb  017_PCA_Dimensionality_Reduction.ipynb  01_Correlations_and_Significance_of_Features.ipynb  02_Advanced_Feature_Selection.ipynb  037_Gradient_Boosting_XGBoost.ipynb  03_Encoding_Tutorial.ipynb  045_RL_Deep_Q_Learning_DQN.ipynb  047_SVM_Kernel_Trick.ipynb  048_tSNE_vs_PCA_Dimensionality_Reduction.ipynb  04_Statistics and Scaling.ipynb  052_Genetic_Algorithms_Evolution.ipynb  056_Positional_Encoding_Transformer.ipynb  057_Metric_Learning_Siamese.ipynb  05_Top_p_Top_k.ipynb  064_Knowledge_Distillation.ipynb  06_Naive_Bayes_Spam.ipynb  07_Confusion_Matrix_Precision_Recall.ipynb  082_Audio_ASR_CTC_Loss.ipynb  087_Graph_Attention_Networks_GAT.ipynb  08_Overfitting_Underfitting.ipynb  090_Isolation_Forest_Anomaly_Detection.ipynb  092_Counterfactual_Explanations.ipynb  099_Neural_Architecture_Search_NAS.ipynb  09_K_Means_Clustering.ipynb  100_World_Models_Model_Based_RL.ipynb  101_KAN_Kolmogorov_Arnold_Networks.ipynb  10_Decision_Trees.ipynb  11_Embeddings_Vector_Space.ipynb  12_LLM_Temperature.ipynb  13_Missing_Data_Imputation.ipynb  14_Random_Forest_Ensemble.ipynb  15_Gradient_Descent.ipynb  16_Neural_Network_Perceptron.ipynb  17_PCA_Dimensionality_Reduction.ipynb  (+84 more)
notebooks/: 000_KDE_Tutorial.ipynb  001_Correlations_and_Significance_of_Features.ipynb  002_Advanced_Feature_Selection.ipynb  003_Encoding_Tutorial.ipynb  004_Statistics and Scaling.ipynb  005_Top_p_Top_k.ipynb  006_Naive_Bayes_Spam.ipynb  007_Confusion_Matrix_Precision_Recall.ipynb  008_Overfitting_Underfitting.ipynb  009_K_Means_Clustering.ipynb  010_Decision_Trees.ipynb  011_Embeddings_Vector_Space.ipynb  012_LLM_Temperature.ipynb  013_Missing_Data_Imputation.ipynb  014_Random_Forest_Ensemble.ipynb  015_Gradient_Descent.ipynb  016_Neural_Network_Perceptron.ipynb  017_PCA_Dimensionality_Reduction.ipynb  018_Cosine_Similarity_Search.ipynb  019_Cross_Validation.ipynb  020_RAG_Architecture_Simulation.ipynb  021_MLP_Neural_Network_XOR.ipynb  022_Activation_Functions.ipynb  023_Tokenization_GPT.ipynb  024_Self_Attention_Mechanism.ipynb  025_Model_Persistence_Pickle_Joblib.ipynb  026_RAG_Chunking_Strategies.ipynb  027_Hyperparameter_Tuning_GridSearch.ipynb  030_Sklearn_Pipelines.ipynb  (+73 more)
