[project]
name = "ai-engineering-handbook"
version = "0.1.0"
description = "Comprehensive guide to AI Engineering: From Statistics to LLMs & Generative AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # --- Core Data Science ---
    "numpy",
    "pandas",
    "scipy",
    "statsmodels",
    
    # --- Visualization ---
    "matplotlib",
    "seaborn",
    
    # --- Classic ML & Tools ---
    "scikit-learn",
    "xgboost",
    "mlxtend",
    "shap",
    "optuna",
    
    # --- Deep Learning (PyTorch) ---
    "torch",
    "torchvision",
    "torchaudio",
    
    # --- NLP & LLM ---
    "tiktoken",
    "openai",
    "ragas",
    "datasets",
    "langchain",
    "langchain-core",
    "langchain-google-genai",
    
    # --- Deployment & Utils ---
    "onnx",
    "onnxruntime",
    "onnxscript",
    "python-dotenv",
    "nest_asyncio",
    "joblib",
    
    # --- Reinforcement Learning & Graphs ---
    "gym",
    "gymnasium",
    "networkx",
    
    # --- Jupyter Env ---
    "ipykernel",
    "notebook"
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }